k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-web-deployment
  namespace: ticketing-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticketing-web
  template:
    metadata:
      labels:
        app: ticketing-web
    spec:
      containers:
        - name: ticketing-web
          image: IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command: ["flask"]
          args:
            - run
            - --host=0.0.0.0
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
