k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-web
spec:
  type: LoadBalancer
  selector:
    app: ticketing-web
  ports:
    - port: 80
      targetPort: 5000
